// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwitterIntegrationList/> render() should render 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All Apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Twitter
        </li>
      </ol>
    </nav>
    <div>
      <button
        class="createIntegrationButton"
      >
        <img
          alt="twitter-logo"
          class="twitterLogo"
          src="test-file-stub"
        />
        Login with Twitter
      </button>
    </div>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-list-top"
  >
    <div
      class="mb-3"
    >
      Create tickets when customers interact with you via replies or mentions on Twitter.
    </div>
  </div>
  <table
    class="table-integrations mt-3 table table-hover"
  >
    <tbody>
      <tr>
        <td
          class="link-full-td"
        >
          <a
            to="/app/settings/integrations/twitter/1"
          >
            <div>
              <img
                alt="twitter logo"
                class="image rounded mr-3"
                width="32"
              />
              <b />
              <span
                class="ml-3 text-faded"
              />
            </div>
          </a>
        </td>
        <td
          class="smallest align-middle"
        >
          <a
            to="/app/settings/integrations/twitter/1"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="container-fluid"
    data-candu-id="integration-list-bottom"
  />
</div>
`;

exports[`<TwitterIntegrationList/> render() should render with a warning message 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All Apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Twitter
        </li>
      </ol>
    </nav>
    <div>
      <button
        class="createIntegrationButton"
      >
        <img
          alt="twitter-logo"
          class="twitterLogo"
          src="test-file-stub"
        />
        Login with Twitter
      </button>
    </div>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-list-top"
  >
    <div
      class="mb-3"
    >
      Create tickets when customers interact with you via replies or mentions on Twitter.
    </div>
    <div
      class="alert warning d-inline-flex"
    >
      <div
        class="iconContainer"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <div
        class="content"
      >
        <span
          class="label"
        >
          <span
            class="d-flex align-items-center"
          >
            You have reached 
            1
            /
            2
             
            integrations. To add more, you must
            <a
              class="ml-1 mr-1"
              to="/app/settings/billing/plans"
            >
              upgrade
            </a>
            to a higher plan.
          </span>
        </span>
      </div>
    </div>
  </div>
  <table
    class="table-integrations mt-3 table table-hover"
  >
    <tbody>
      <tr>
        <td
          class="link-full-td"
        >
          <a
            to="/app/settings/integrations/twitter/1"
          >
            <div>
              <img
                alt="twitter logo"
                class="image rounded mr-3"
                width="32"
              />
              <b />
              <span
                class="ml-3 text-faded"
              />
            </div>
          </a>
        </td>
        <td
          class="smallest align-middle"
        >
          <a
            to="/app/settings/integrations/twitter/1"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="container-fluid"
    data-candu-id="integration-list-bottom"
  />
</div>
`;

exports[`<TwitterIntegrationList/> render() should render with an error message and without creation button 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All Apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Twitter
        </li>
      </ol>
    </nav>
    <div />
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-list-top"
  >
    <div
      class="mb-3"
    >
      Create tickets when customers interact with you via replies or mentions on Twitter.
    </div>
    <div
      class="alert error d-inline-flex"
    >
      <div
        class="iconContainer"
      >
        <img
          alt="icon"
          src="test-file-stub"
        />
      </div>
      <div
        class="content"
      >
        <span
          class="label"
        >
          <span
            class="d-flex align-items-center"
          >
            You have reached 
            1
            /
            1
             
            integrations. To add more, you must
            <a
              class="ml-1 mr-1"
              to="/app/settings/billing/plans"
            >
              upgrade
            </a>
            to a higher plan.
          </span>
        </span>
      </div>
    </div>
  </div>
  <table
    class="table-integrations mt-3 table table-hover"
  >
    <tbody>
      <tr>
        <td
          class="link-full-td"
        >
          <a
            to="/app/settings/integrations/twitter/1"
          >
            <div>
              <img
                alt="twitter logo"
                class="image rounded mr-3"
                width="32"
              />
              <b />
              <span
                class="ml-3 text-faded"
              />
            </div>
          </a>
        </td>
        <td
          class="smallest align-middle"
        >
          <a
            to="/app/settings/integrations/twitter/1"
          >
            <i
              class="material-icons md-2 align-middle icon-go-forward"
            >
              keyboard_arrow_right
            </i>
          </a>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="container-fluid"
    data-candu-id="integration-list-bottom"
  />
</div>
`;

exports[`<TwitterIntegrationList/> render() should render with empty list 1`] = `
<div
  class="w-100"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All Apps
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Twitter
        </li>
      </ol>
    </nav>
    <div>
      <button
        class="createIntegrationButton"
      >
        <img
          alt="twitter-logo"
          class="twitterLogo"
          src="test-file-stub"
        />
        Login with Twitter
      </button>
    </div>
  </div>
  <div
    class="pageContainer pb0 container-fluid"
    data-candu-id="integration-list-top"
  >
    <div
      class="mb-3"
    >
      Create tickets when customers interact with you via replies or mentions on Twitter.
    </div>
    <div
      class="mt-3"
    >
      You have no integration of this type at the moment.
    </div>
  </div>
  <div
    class="container-fluid"
    data-candu-id="integration-list-bottom"
  />
</div>
`;
